  python that was build with ``MACOSX_DEPLOYMENT_TARGET=10.5``.

  Note that class posing (the ``poseAsClass_`` class method) is not supported 
  in 64-bit mode. It is also not possible to create new protocols in 64-bit 
  code. Neither are supported by the 64-bit runtime APIs (that is, it is a 
  restriction in Apple's Objective-C 2.0 runtime).


Version 2.0.1 (...)
-------------------

- BUGFIX: don't crash when printing CF objects that are magic cookies.

- BUGFIX: It is now possible to override ``respondsToSelector:`` in Python.

- BUGFIX: The wrappers for CoreFoundation types no longer create a new type 
  in the Objective-C runtime, that type wasn't used anywhere and was an 
  unwanted side-effect of how CoreFoundation types are wrapped.


- Add support for interacting with '@synchronized' blocks in Objective-C.

  The function ``object_lock(object)`` is a contextmanager that acquires and
  releases the '@synchronized' mutex for an object, and can also be used
  manually.

  That is (as context manager)::
  	from __future__ import with_statement

	obj = NSObject.new()

	with objc.object_lock(obj):
	    # Perform work while owning the @synchronize lock
	    pass

   or (manually)::

   	obj = NSObject.new()
	mutex = objc.object_lock(obj)
	mutex.lock()
	try:
	    # Perform work while owning the @synchronized lock
	    pass
	finally:
	    mutex.unlock()

   Note that the first version is slightly saver (see the documentation
   for with-statements for the details).

Version 2.0 (MacOS X 10.5.0)
----------------------------

- The basic infrastructure for playing nice in a GC host was added.

  This doesn't mean that PyObjC now actually plays nice with the ObjC 
  garbage collector, some more development and much more testing is 
  needed for that. 

  Even so, the end result is about as good as we have without GC, 
  programs won't make optimal use of GC because that would require
  surgery on the Python interpreter itself.
