@@ -30,6 +30,9 @@ Version 2.1 (...)
 Version 2.0.1 (...)
 -------------------
 
+- BUGFIX: ``objc.inject`` works on Leopard (at least on Intel Macs, haven't
+  tested on PPC). 
+
 - BUGFIX: don't crash when printing CF objects that are magic cookies.
 
 - BUGFIX: It is now possible to override ``respondsToSelector:`` in Python.
